methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs: error: not found: value move
		move(getY(),getDirection() == Direction.NORTH); 
                ^MethodsArgs:8: error: not found: value versLAvant
    versLAvant=false
    ^MethodsArgs:14: error: not found: value versLAvant
  if (versLAvant==true){
      ^MethodsArgs:19: error: not found: value versLAvant
  if(versLAvant==false){
     ^