methods.args.MethodsArgs.scala.code
var verLAvant:Boolean
var nbPas:Int
if (getDirection()==Direction.NORTH){
    verLAvant=true
  }
  else{
    versLAvant=false

  }
	var Y:Int=0
  Y=getY()
  nbPas=6-Y
  if (versLAvant==true){
    for (i<- 0 to nbPas){
      avance()
    }
  }
  if(versLAvant==false){
    for (i<-0 to nbPas){
      recule()
    }
  }